# bdf-pz

./: .beaker.conf.old  .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  bdf-pz.code-workspace  beaker_kernel-1.6.8a2-py3-none-any.whl:Zone.Identifier  beaker_kernel-1.7.3a0-py3-none-any.whl  beaker_kernel-1.8.7b1-py3-none-any.whl  beaker_kernel-1.9.0a1-py3-none-any.whl  beaker_kernel-1.9.0a2-py3-none-any.whl  docker-compose.yaml  env.example  learnings.txt  pyproject.toml  script.py  script_notebook.ipynb  script_notebook_2.ipynb  tmp.py
custom-ui/: Dockerfile  beaker-kernel-1.7.3-a0.tgz  docker-compose.yaml  package-lock.json  package.json
parse-answer-errors/: error-1750756918.599223.txt  error-1750756925.1351929.txt  error-1750756928.8628922.txt  error-1750756932.9350224.txt  error-1750756940.4737067.txt  error-1750756948.0192473.txt  error-1750756951.6857903.txt  error-1750756957.403893.txt  error-1750758357.54614.txt  error-1750758367.0911322.txt  error-1750758370.567261.txt  error-1750758375.1186905.txt  error-1750758382.6910222.txt  error-1750758387.8115952.txt  error-1750758392.5014193.txt  error-1750758397.1036868.txt  error-1750759870.7098637.txt  error-1750759878.090375.txt  error-1750759885.0876575.txt  error-1750759890.8035007.txt  error-1750759903.584029.txt  error-1750759911.1018512.txt  error-1750759916.0991373.txt  error-1750759922.146118.txt  error-1750760917.1928816.txt  error-1750760923.2575467.txt  error-1750760925.0046048.txt  error-1750760927.839074.txt  error-1750760931.3771746.txt  error-1750760933.436269.txt  error-1750760936.250303.txt  error-1750760975.181265.txt  error-1750760978.3715687.txt  error-1750760980.0246074.txt  error-1750760981.9452825.txt  error-1750760985.472541.txt  error-1750760988.10511.txt  error-1750760990.365648.txt  (+2 more)
(+36 files in other folders)
