[build-system]
requires = ["hatchling==1.14"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "bdf-pz"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Brandon Rose", email = "rose.brandon.m@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker_kernel~=1.8.8",
  "pandas",
  "prettytable",
]

[project.urls]
Documentation = "https://github.com/Brandon Rose/bdf-pz#readme"
Issues = "https://github.com/Brandon Rose/bdf-pz/issues"
Source = "https://github.com/Brandon Rose/bdf-pz"

[tool.hatch.version]
path = "src/bdf_pz/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bdf_pz tests}"

[tool.coverage.run]
source_pkgs = ["bdf_pz", "tests"]
branch = true
parallel = true
omit = [
  "src/bdf_pz/__about__.py",
]

[tool.coverage.paths]
bdf_pz = ["src/bdf_pz", "*/bdf-pz/src/bdf_pz"]
tests = ["tests", "*/bdf-pz/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.beaker]
require-runtime-dependencies = true
